completed the updated task functionality and also solved the overflow-x issue

--- a/src/components/Task/task.styles.css
+++ b/src/components/Task/task.styles.css
@@ -15,6 +15,10 @@
     color: #4423A5;
 }
 
+.task-title {
+    word-break: break-all;
+}
+
 .task-completed-status:hover {
     cursor: pointer;
 }
